[tool.poetry]
name = "minigrad"
version = "0.1.0"
description = ""
authors = ["avramdj <avramdjordjevic2@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
pycuda = { version = "^2022.2.2", extras = ["gpu"] }
cupy = { version = "^11.1.0", extras = ["gpu"] }


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
mypy = "^1.3.0"
torch = "1.13.1"
scikit-learn = "^1.2.2"

[tool.black]
line-length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
